* Bug #35090 [WIP]: Added German translations for ConfigPage
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52303 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-41) unstable; urgency=low
+
+  * Bug #35090 [WIP]: Added German translations for ConfigPage
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 29 Jul 2014 09:39:11 +0200
+
 univention-ad-connector (8.0.17-40) unstable; urgency=low
 
   * Allow kerberos bind info for password sync (Bug #35091)
