Bug #35488 xen/qemu-dm: Suppress "ungeistered DMA channel" message YAML
Print log message only once per process instance.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52307 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/xen-4.1/debian/changelog
+++ b/virtualization/xen-4.1/debian/changelog
@@ -1,6 +1,6 @@
 xen-4.1 (4.1.3-15) unstable; urgency=low
 
-  * Bug #35488 qemu-dm: Suppress "ungeistered DMA channel" message.
+  * Bug #35488 qemu-dm: Suppress "unregistered DMA channel" message.
 
  -- Philipp Hahn <hahn@univention.de>  Mon, 28 Jul 2014 15:17:02 +0200
 
