* admember.py: server_supports_ssl: we have to create a new process   because there is only one sec context allowed in python-ldap   (Bug #34091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52310 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,11 @@
+univention-lib (3.0.26-46) unstable; urgency=low
+
+  * admember.py: server_supports_ssl: we have to create a new process
+    because there is only one sec context allowed in python-ldap
+    (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Jul 2014 10:36:32 +0200
+
 univention-lib (3.0.26-45) unstable; urgency=low
 
   * enable password change (Bug #35467) 
