* New script well-known-sid-object-rename (Bug #35507)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52313 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-42) unstable; urgency=medium
+
+  * New script well-known-sid-object-rename (Bug #35507)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 12:10:21 +0200
+
 univention-ad-connector (8.0.17-41) unstable; urgency=low
 
   * Bug #35090 [WIP]: Added German translations for ConfigPage
