added debug output (Bug #35467)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52314 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-47) unstable; urgency=low
+
+  * added debug output (Bug #35467) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 29 Jul 2014 12:15:32 +0200
+
 univention-lib (3.0.26-46) unstable; urgency=low
 
   * admember.py: server_supports_ssl: we have to create a new process
