--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-48) unstable; urgency=medium
+
+  * Call rename_well_known_sid_objects just before starting the connector
+    (Bug #35507)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 12:25:52 +0200
+
 univention-lib (3.0.26-47) unstable; urgency=low
 
   * added debug output (Bug #35467) 
