univention-directory-manager-modules (9.0.76-18) unstable; urgency=medium
  * revert changes for (Bug #35254)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52318 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-18) unstable; urgency=medium
+
+  * revert changes for (Bug #35254)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 29 Jul 2014 12:38:20 +0200
+
 univention-directory-manager-modules (9.0.76-17) unstable; urgency=low
 
   * Temporarily set the dns/alias syntax back to string again. The new
