* admember.py: add dns/dns to show/adnotification UCR variables (Bug #34092)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52319 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-49) unstable; urgency=low
+
+  * admember.py: add dns/dns to show/adnotification UCR variables (Bug #34092)
+
+ -- Florian Best <best@univention.de>  Tue, 29 Jul 2014 12:41:06 +0200
+
 univention-lib (3.0.26-48) unstable; urgency=medium
 
   * Call rename_well_known_sid_objects just before starting the connector
