* Readd univention-directory-policy dependency (Bug #35431)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52327 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.0-4) unstable; urgency=low
+
+  * Readd univention-directory-policy dependency (Bug #35431)
+
+ -- Florian Best <best@univention.de>  Tue, 29 Jul 2014 13:44:43 +0200
+
 univention-updater (10.0.0-3) unstable; urgency=low
 
   * Remove univention-directory-policy from the dependencies and add it
