* Bug #35090 [WIP]: Send status of running ad connector service
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52328 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-45) unstable; urgency=low
+
+  * Bug #35090 [WIP]: Send status of running ad connector service
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 29 Jul 2014 14:22:46 +0200
+
 univention-ad-connector (8.0.17-44) unstable; urgency=medium
 
   * Script well-known-sid-object-rename: Strip down initialization
