--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-50) unstable; urgency=low
+
+  * added debug output (Bug #35467) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 29 Jul 2014 14:31:18 +0200
+
 univention-lib (3.0.26-49) unstable; urgency=low
 
   * admember.py: add dns/dns to show/adnotification UCR variables (Bug #34092)
