added ldap/sasl/secprops/maxssf (Bug #35513)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52334 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-40) unstable; urgency=low
+
+  * added ldap/sasl/secprops/maxssf (Bug #35513) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 29 Jul 2014 15:37:38 +0200
+
 univention-ldap (10.0.17-39) unstable; urgency=low
 
   * Fixed typo in control file (Bug #35093)
