* set ldap/sasl/secprops/maxssf=128 in enable_ssl     and unset ldap/sasl/secprops/maxssf in disbale_ssl (Bug #35513)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52337 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-51) unstable; urgency=low
+
+  * set ldap/sasl/secprops/maxssf=128 in enable_ssl
+    and unset ldap/sasl/secprops/maxssf in disbale_ssl (Bug #35513) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 29 Jul 2014 15:48:31 +0200
+
 univention-lib (3.0.26-50) unstable; urgency=low
 
   * added debug output (Bug #35467) 
