--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-46) unstable; urgency=low
+
+  * Bug #35090 [WIP]: Remove debug code
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 29 Jul 2014 17:20:14 +0200
+
 univention-ad-connector (8.0.17-45) unstable; urgency=low
 
   * Bug #35090 [WIP]: Send status of running ad connector service
