Bug #35090 [WIP]: * integration of connector wizard path * clean up * adaptation of backend method for join into AD
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52341 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-ad-connector (8.0.17-47) unstable; urgency=medium
+
+  Bug #35090 [WIP]:
+  * integration of connector wizard path
+  * clean up
+  * adaptation of backend method for join into AD
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Jul 2014 17:57:26 +0200
+
 univention-ad-connector (8.0.17-46) unstable; urgency=low
 
   * Bug #35090 [WIP]: Remove debug code
