* Script well-known-sid-object-rename (Bug #35507)   * Add options --binddn and --bindpw to override connector/ad/ldap/bind*   * Mask connector/ad/ldap/kerberos in script if true to avoid cached creds
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52343 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (8.0.17-48) unstable; urgency=medium
+
+  * Script well-known-sid-object-rename (Bug #35507)
+    * Add options --binddn and --bindpw to override connector/ad/ldap/bind*
+    * Mask connector/ad/ldap/kerberos in script if true to avoid cached creds
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 18:17:06 +0200
+
 univention-ad-connector (8.0.17-47) unstable; urgency=medium
 
   Bug #35090 [WIP]:
