* admember.prepare_connector_settings has to be done before   running admember.rename_well_known_sid_objects (Bug #35507) * Run admember.revert_connector_settings in case of error
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52344 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (8.0.17-49) unstable; urgency=medium
+
+  * admember.prepare_connector_settings has to be done before
+    running admember.rename_well_known_sid_objects (Bug #35507)
+  * Run admember.revert_connector_settings in case of error
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 18:22:31 +0200
+
 univention-ad-connector (8.0.17-48) unstable; urgency=medium
 
   * Script well-known-sid-object-rename (Bug #35507)
