* Updated translations (Bug #35507)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52345 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-50) unstable; urgency=medium
+
+  * Updated translations (Bug #35507)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 18:41:56 +0200
+
 univention-ad-connector (8.0.17-49) unstable; urgency=medium
 
   * admember.prepare_connector_settings has to be done before
