--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-51) unstable; urgency=medium
+
+  * Some fixes (Bug #35507)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 19:26:45 +0200
+
 univention-ad-connector (8.0.17-50) unstable; urgency=medium
 
   * Updated translations (Bug #35507)
