--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,13 @@
+univention-ad-connector (8.0.17-52) unstable; urgency=medium
+
+  Bug #35090 [WIP]:
+  * fixed problem with reverting in if case after exception handling
+  * rename syncmode to mode in wizard (to avoid naming collision)
+  * guess AD domain language ('de' or 'en')
+  * further integration of connector wizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Jul 2014 19:37:40 +0200
+
 univention-ad-connector (8.0.17-51) unstable; urgency=medium
 
   * Some fixes (Bug #35507)
