--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-53) unstable; urgency=medium
+
+  * Adjust configure_ad_member to be more similar to the UMC module
+    (Bug #35507)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 19:41:39 +0200
+
 univention-lib (3.0.26-52) unstable; urgency=medium
 
   * admember.rename_well_known_sid_objects needs Administrator credentials
