--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,4 +1,10 @@
-univention-s4-connector (8.0.33-66) UNRELEASED; urgency=medium
+univention-s4-connector (8.0.33-67) unstable; urgency=medium
+
+  * Remove univention-ad-takeover CLI script (Bug #35514)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 20:00:17 +0200
+
+univention-s4-connector (8.0.33-66) unstable; urgency=medium
 
   * Adjust bug number for Errata update (Bug #35500)
 
