Bug #35090 * finished integration of wizard path for connector * removed function lookup_ad_domain_info() * moved download links into separate widget DownloadInfo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52353 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-ad-connector (8.0.17-53) unstable; urgency=medium
+
+  Bug #35090
+  * finished integration of wizard path for connector
+  * removed function lookup_ad_domain_info()
+  * moved download links into separate widget DownloadInfo
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Jul 2014 21:01:22 +0200
+
 univention-ad-connector (8.0.17-52) unstable; urgency=medium
 
   Bug #35090 [WIP]:
