* Script well-known-sid-object-rename (Bug #35507):   * disable connector/ad/ldap/ssl as well for the scope of the script   * correctly handle CONFIGBASENAME in ucr tweak for kerberos and ssl
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52361 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (8.0.17-54) unstable; urgency=medium
+
+  * Script well-known-sid-object-rename (Bug #35507):
+    * disable connector/ad/ldap/ssl as well for the scope of the script
+    * correctly handle CONFIGBASENAME in ucr tweak for kerberos and ssl
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 10:28:35 +0200
+
 univention-ad-connector (8.0.17-53) unstable; urgency=medium
 
   Bug #35090
