* Set univentionObjectFlag to synced for cn and ou (Bug #35091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52368 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-55) unstable; urgency=low
+
+  * Set univentionObjectFlag to synced for cn and ou (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 30 Jul 2014 12:43:02 +0200
+
 univention-ad-connector (8.0.17-54) unstable; urgency=medium
 
   * Script well-known-sid-object-rename (Bug #35507):
