--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-54) unstable; urgency=low
+
+  * check cldap and dns in lookup_adds_dc() (Bug #35520) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 30 Jul 2014 12:53:21 +0200
+
 univention-lib (3.0.26-53) unstable; urgency=medium
 
   * Adjust configure_ad_member to be more similar to the UMC module
