* added python-ipaddr and dnsutils to the     package dependencies (Bug #35520)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52373 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-55) unstable; urgency=low
+
+  * added python-ipaddr and dnsutils to the 
+    package dependencies (Bug #35520)
+
+ -- Felix Botner <botner@univention.de>  Wed, 30 Jul 2014 12:56:04 +0200
+
 univention-lib (3.0.26-54) unstable; urgency=low
 
   * check cldap and dns in lookup_adds_dc() (Bug #35520) 
