disable_ssl() in admember_join (Bug #35090)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52375 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-56) unstable; urgency=low
+
+  * disable_ssl() in admember_join (Bug #35090)
+
+ -- Felix Botner <botner@univention.de>  Wed, 30 Jul 2014 13:20:42 +0200
+
 univention-ad-connector (8.0.17-55) unstable; urgency=low
 
   * Set univentionObjectFlag to synced for cn and ou (Bug #35091)
