--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-adtakeover (1.0.10-34) unstable; urgency=medium
+
+  * Set nameserver1 to config_registry.Interfaces().get_default_ip_address()
+    after initial domain join, instead of reverting to nameserver1/local,
+    which would be the wrong choice when coming from AD Member (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 14:54:57 +0200
+
 univention-management-console-module-adtakeover (1.0.10-33) unstable; urgency=medium
 
   * perform a reset_sysvol_ntacls before robocopy, required when coming from
