* set_nameserver1_to_local_default_ip before robocopy and   perform reconfigure_nameserver_for_samba_backend later as usual. * Update translations (Bug #35346).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52383 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/umc/js/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-reboot\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2014-04-03 11:49+0200\n"
+"POT-Creation-Date: 2014-07-30 15:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -13,20 +13,21 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: umc/js/adtakeover.js:111
+#, python-brace-format
 msgid ""
-"<p>A <i>{ad_os}</i> Active Directory domain with the domainname <i>"
-"{ad_domain}</i> has been found. The server <i>{ad_hostname} ({ad_ip})</i> "
+"<p>A <i>{ad_os}</i> Active Directory domain with the domainname "
+"<i>{ad_domain}</i> has been found. The server <i>{ad_hostname} ({ad_ip})</i> "
 "will be used as Active Directory Domain Controller for the takeover.</"
 "p><p>The following accounts have been found in the Active Directory domain:"
 "<ul><li>{users} users</li><li>{groups} groups</li><li>{computers} computers</"
 "li></ul>Click \"Next\" to start with the migration.</p>"
 msgstr ""
-"Es wurde eine <i>{ad_os}</i> Active Directory-Domäne mit dem Domänennamen <i>"
-"{ad_domain}</i> gefunden. Der Server <i>{ad_hostname} ({ad_ip})</i> wird für "
-"die Übernahme als Active Directory Domänencontroller benutzt werden. Die "
-"folgenden Konten wurden in der Active Directory-Domäne gefunden:<ul><li>"
-"{users} Benutzer</li><li>{groups} Gruppen</li><li>{computers} Rechner</li></"
-"ul>Klicken Sie auf \"Weiter\", um die Übernahme zu starten."
+"Es wurde eine <i>{ad_os}</i> Active Directory-Domäne mit dem Domänennamen "
+"<i>{ad_domain}</i> gefunden. Der Server <i>{ad_hostname} ({ad_ip})</i> wird "
+"für die Übernahme als Active Directory Domänencontroller benutzt werden. Die "
+"folgenden Konten wurden in der Active Directory-Domäne gefunden:"
+"<ul><li>{users} Benutzer</li><li>{groups} Gruppen</li><li>{computers} "
+"Rechner</li></ul>Klicken Sie auf \"Weiter\", um die Übernahme zu starten."
 
 #: umc/js/adtakeover.js:75
 msgid ""
