--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-adtakeover (1.0.10-35) unstable; urgency=medium
+
+  * set_nameserver1_to_local_default_ip before robocopy and
+    perform reconfigure_nameserver_for_samba_backend later as usual.
+  * Update translations (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 15:13:57 +0200
+
 univention-management-console-module-adtakeover (1.0.10-34) unstable; urgency=medium
 
   * Set nameserver1 to config_registry.Interfaces().get_default_ip_address()
