--- a/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-reboot\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-10 11:32+0200\n"
+"Report-Msgid-Bugs-To: packages@univention.de\n"
+"POT-Creation-Date: 2014-07-30 15:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,7 +12,90 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: __init__.py:69
+#: umc/python/adtakeover/takeover.py:1899
+msgid " failed"
+msgstr " schlug fehl"
+
+#: umc/python/adtakeover/takeover.py:796
+#, python-format
+msgid "AD Server did not return proper time string: %s."
+msgstr ""
+"Der Active Directory Server lieferte eine unerwartete Zeitangabe zurück: %s."
+
+#: umc/python/adtakeover/takeover.py:613
+#, python-format
+msgid "Active Directory services not detected at %s."
+msgstr "Active Directory Dienste sind nicht erreichbar über %s."
+
+#: umc/python/adtakeover/takeover.py:1379
+msgid "Active Directory takeover finished already."
+msgstr "Active Directory Takeover ist schon abgeschlossen."
+
+#: umc/python/adtakeover/takeover.py:324
+msgid "Adjusting settings in Samba directory service"
+msgstr "Anpassung von Einstellungen im Samba Verzeichnisdienst "
+
+#: umc/python/adtakeover/takeover.py:201
+msgid ""
+"At least one GPO in SYSVOL is newer than the Group Policy Container version."
+msgstr ""
+"Mindestens eine GPO im SYSVOL ist neuer als die Group Policy Container "
+"Version."
+
+#: umc/python/adtakeover/takeover.py:198
+#: umc/python/adtakeover/takeover.py:1826
+msgid "At least one GPO in SYSVOL is not up to date yet."
+msgstr "Mindestens eine GPO im SYSVOL ist noch nicht aktuell."
+
+#: umc/python/adtakeover/takeover.py:195
+msgid "At least one GPO is still missing in SYSVOL."
+msgstr "Mindestens eine GPO fehlt noch im SYSVOL."
+
+#: umc/python/adtakeover/takeover.py:241 umc/python/adtakeover/takeover.py:268
+msgid "Authenticating"
+msgstr "Authentifizierung"
+
+#: umc/python/adtakeover/takeover.py:189
+msgid "Authentication failed."
+msgstr "Authentifizierung fehlgeschlagen."
+
+#: umc/python/adtakeover/takeover.py:379
+msgid "Checking GPOs in SYSVOL"
+msgstr "Prüfung der GPO-Daten im SYSVOL"
+
+#: umc/python/adtakeover/takeover.py:288
+msgid "Checking group policies"
+msgstr "Prüfung der Gruppenrichtlinien"
+
+#: umc/python/adtakeover/takeover.py:347
+msgid "Claiming FSMO roles"
+msgstr "Übernahme der FSMO Rollen"
+
+#: umc/python/adtakeover/takeover.py:238 umc/python/adtakeover/takeover.py:264
+#, python-format
+msgid "Connecting to %s"
+msgstr "Verbindung zu %s"
+
+#: umc/python/adtakeover/takeover.py:1935
+#, python-format
+msgid "Connection to Active Directory server %s failed."
+msgstr "Die Verbindung zum Active Directory Server %s schlug fehl."
+
+#: umc/python/adtakeover/takeover.py:902 umc/python/adtakeover/takeover.py:912
+#, python-format
+msgid "Copying %s"
+msgstr "Kopiere %s"
+
+#: umc/python/adtakeover/takeover.py:884
+#, python-format
+msgid "Could not read local machine password: %s"
+msgstr "Interner Fehler beim Lesen des Maschinenpassworts: %s"
+
+#: umc/python/adtakeover/takeover.py:192
+msgid "Domain join failed."
+msgstr "Der Domänenbeitritt schlug fehl."
+
+#: umc/python/adtakeover/__init__.py:69
 #, python-format
 msgid ""
 "Execution of command '%(command)s' has failed:\n"
@@ -23,201 +106,88 @@ msgstr ""
 "\n"
 "%(text)s"
 
-#: takeover.py:178
-msgid "The computer is not reachable."
-msgstr "Der Rechner ist nicht erreichbar."
-
-#: takeover.py:181
-msgid "Authentication failed."
-msgstr "Authentifizierung fehlgeschlagen."
-
-#: takeover.py:184
-msgid "Domain join failed."
-msgstr "Der Domänenbeitritt schlug fehl."
-
-#: takeover.py:187
-msgid "At least one GPO is still missing in SYSVOL."
-msgstr "Mindestens eine GPO fehlt noch im SYSVOL."
-
-#: takeover.py:190 takeover.py:1739
-msgid "At least one GPO in SYSVOL is not up to date yet."
-msgstr "Mindestens eine GPO im SYSVOL ist noch nicht aktuell."
-
-#: takeover.py:193
-msgid ""
-"At least one GPO in SYSVOL is newer than the Group Policy Container version."
+#: umc/python/adtakeover/takeover.py:1968
+msgid "Faild to detect the Active Directory site of the server."
 msgstr ""
-"Mindestens eine GPO im SYSVOL ist neuer als die Group Policy Container "
-"Version."
+"Die Erkennung des Active Directory Standorts (site) des Servers schlug fehl."
 
-#: takeover.py:196
-msgid "Something is wrong with the SYSVOL."
-msgstr "Etwas stimmt nicht mit dem SYSVOL."
+#: umc/python/adtakeover/takeover.py:665
+msgid "Failed to determine AD domain SID."
+msgstr "Die SID der AD-Domäne konnte nicht festgestellt werden."
 
-#: takeover.py:199
-msgid "The Active Directory server seems to be running. It must be shut off."
-msgstr ""
-"Es scheint, als ob der Active Directory Server noch liefe. Er muss "
-"ausgeschaltet werden."
+#: umc/python/adtakeover/takeover.py:985
+msgid "Failed to determine new domain SID."
+msgstr "Die neue Domänen-SID konnte nicht festgestellt werden."
 
-#: takeover.py:202
-msgid "Time synchronization failed."
-msgstr "Die Zeitsynchronisierung schlug fehl."
-
-#: takeover.py:205
-msgid "Time difference critical for Kerberos but synchronization aborted."
-msgstr ""
-"Die Zeitdifferenz ist zu groß für Kerberos aber die Synchronisierung schlug "
-"fehl."
-
-#: takeover.py:208
-msgid "Insufficient License."
-msgstr "Die Lizenz reicht nicht aus."
-
-#: takeover.py:230 takeover.py:256
-#, python-format
-msgid "Connecting to %s"
-msgstr "Verbindung zu %s"
-
-#: takeover.py:233 takeover.py:260
-msgid "Authenticating"
-msgstr "Authentifizierung"
-
-#: takeover.py:236
-msgid "Retrieving information from AD DC"
-msgstr "Abfrage von Informationen vom AD DC"
-
-#: takeover.py:241
-msgid ""
-"You may proceed with the takeover, but the domain management may be limited "
-"afterwards until a new license is installed."
-msgstr ""
-"Der Takeover kann fortgeführt werden, aber die Domäne kann danach womöglich "
-"nur eingeschränkt verwaltet werden, bis eine neue Lizenz installiert wird."
-
-#: takeover.py:264
-msgid "Synchronizing System Clock"
-msgstr "Synchronisation der Systemzeit"
-
-#: takeover.py:269
-msgid "Joining the domain"
-msgstr "Domänenbeitritt"
-
-#: takeover.py:273
-msgid "Starting Samba"
-msgstr "Start von Samba"
-
-#: takeover.py:276
-msgid "Rewriting SIDs in the UCS directory service"
-msgstr "Umschreibung der SIDs im UCS Verzeichnisdienst"
-
-#: takeover.py:279
-msgid "Checking group policies"
-msgstr "Prüfung der Gruppenrichtlinien"
-
-#: takeover.py:282
-msgid "Initializing the S4 Connector listener"
-msgstr "Initialisierung des S4 Connector Listeners"
-
-#: takeover.py:286
-msgid "Starting the S4 Connector"
-msgstr "Start des S4 Connectors"
-
-#: takeover.py:290
-msgid "Rebuilding IDMAP"
-msgstr "Erstellung der IDMAP Tabelle"
-
-#: takeover.py:306
-#, python-format
-msgid "Search for %s in network"
-msgstr "Netzwerksuche nach %s"
-
-#: takeover.py:311
-msgid "Taking over Active Directory domaincontroller roles"
-msgstr "Übernahme der Active Directory Domaincontroller Rollen"
-
-#: takeover.py:312
-msgid "Adjusting settings in Samba directory service"
-msgstr "Anpassung von Einstellungen im Samba Verzeichnisdienst "
-
-#: takeover.py:316
-msgid "Removing the previous AD server account"
-msgstr "Entfernen des alten AD Server Kontos"
-
-#: takeover.py:320
-msgid "Taking over DNS address"
-msgstr "Übernahme der DNS Adresse"
-
-#: takeover.py:323
-msgid "Taking over NETBIOS address"
-msgstr "Übernahme der NETBIOS Adresse"
-
-#: takeover.py:326
-msgid "Taking over IP address"
-msgstr "Übernahme der IP Adresse"
-
-#: takeover.py:329
-msgid "Registering IP in DNS"
-msgstr "Registrierung der IP im DNS"
-
-#: takeover.py:332
-msgid "Reconfiguring nameserver"
-msgstr "Rekonfigurierung des Nameservers"
-
-#: takeover.py:335
-msgid "Claiming FSMO roles"
-msgstr "Übernahme der FSMO Rollen"
-
-#: takeover.py:338
+#: umc/python/adtakeover/takeover.py:350
 msgid "Finalizing"
 msgstr "Abschluss"
 
-#: takeover.py:367
-msgid "Checking GPOs in SYSVOL"
-msgstr "Prüfung der GPO-Daten im SYSVOL"
+#: umc/python/adtakeover/takeover.py:290
+msgid "Initializing the S4 Connector listener"
+msgstr "Initialisierung des S4 Connector Listeners"
 
-#: takeover.py:394
+#: umc/python/adtakeover/takeover.py:216
+msgid "Insufficient License."
+msgstr "Die Lizenz reicht nicht aus."
+
+#: umc/python/adtakeover/takeover.py:560
+msgid "Internal Error: License check failed."
+msgstr "Interner Fehler ver der Prüfung der Lizenz."
+
+#: umc/python/adtakeover/takeover.py:815
 #, python-format
-msgid "Internal module error: Refusing to set invalid state '%s'."
-msgstr "Interner Modulfehler: Setzen des ungültigen Status '%s' abgelehnt."
+msgid "Internal Error: rdate -s -p failed (%d)."
+msgstr "Internal Error: rdate -s -p schlug fehl (%d)."
 
-#: takeover.py:411
+#: umc/python/adtakeover/takeover.py:423
 #, python-format
 msgid "Internal module error: Cannot go from state '%s' to state '%s'."
 msgstr ""
 "Interner Modulfehler: Übergang von Status '%s' zu Status '%s' ist nicht "
 "möglich."
 
-#: takeover.py:416
+#: umc/python/adtakeover/takeover.py:428
 #, python-format
 msgid ""
 "Internal module error: Expected to be in state 'sysvol', but found '%s'."
 msgstr "Interner Modulfehler: Zustand 'sysvol' erwartet, aber '%s' gefunden."
 
-#: takeover.py:421
+#: umc/python/adtakeover/takeover.py:433
 #, python-format
 msgid ""
 "Internal module error: Expected to be in state 'takeover', but found '%s'."
 msgstr "Interner Modulfehler: Zustand 'takeover' erwartet, aber '%s' gefunden."
 
-#: takeover.py:426
+#: umc/python/adtakeover/takeover.py:406
+#, python-format
+msgid "Internal module error: Refusing to set invalid state '%s'."
+msgstr "Interner Modulfehler: Setzen des ungültigen Status '%s' abgelehnt."
+
+#: umc/python/adtakeover/takeover.py:438
 msgid "Internal module error: Takeover running, aborting attempt to restart."
 msgstr "Interner Modulfehler: Takeover läuft, Neustartversuch abgebrochen."
 
-#: takeover.py:450
+#: umc/python/adtakeover/takeover.py:2407
+#, python-format
+msgid "Invalid UNC string: %s"
+msgstr "Ungültiger UNC Pfad: %s"
+
+#: umc/python/adtakeover/takeover.py:462
 #, python-format
 msgid "Invalid state in file %s"
 msgstr "Ungültige Zustands-Datei %s"
 
-#: takeover.py:548
-msgid "Internal Error: License check failed."
-msgstr "Interner Fehler ver der Prüfung der Lizenz."
+#: umc/python/adtakeover/takeover.py:277
+msgid "Joining the domain"
+msgstr "Domänenbeitritt"
 
-#: takeover.py:559
-msgid "users"
-msgstr "Benutzer"
+#: umc/python/adtakeover/takeover.py:1902
+#, python-format
+msgid "Network connection to %s failed."
+msgstr "Netzwerkverbindung zu %s schlug fehl."
 
-#: takeover.py:572
+#: umc/python/adtakeover/takeover.py:584
 #, python-format
 msgid ""
 "Number of %(object_name)s after takeover would be %(sum)s. This would exceed "
@@ -226,42 +196,19 @@ msgstr ""
 "Anzahl der %(object_name)s nach dem Takeover wäre %(sum)s. Das übersteigt "
 "die Anzahl an lizenzierten Objekten (%(max)s)."
 
-#: takeover.py:616
-msgid ""
-"The selected Active Directory server has the same NTDS GUID as this UCS "
-"server."
-msgstr ""
-"Der angegebene Active Directory Server hat die gleiche NTDS GUID wie dieser "
-"UCS Server."
+#: umc/python/adtakeover/takeover.py:298
+msgid "Rebuilding IDMAP"
+msgstr "Erstellung der IDMAP Tabelle"
 
-#: takeover.py:621
-msgid ""
-"The LDAP base of this UCS domain differs from the LDAP base of the selected "
-"Active Directory domain."
-msgstr ""
-"Die LDAP-Basis dieser UCS Domäne unterscheidet sich von der LDAP-Basis der "
-"ausgewählten Active Directory Domäne."
+#: umc/python/adtakeover/takeover.py:344
+msgid "Reconfiguring nameserver"
+msgstr "Rekonfigurierung des Nameservers"
 
-#: takeover.py:636
-#, python-format
-msgid ""
-"The Active Directory domain has a function level of Windows Server 2012 or "
-"newer, Samba currently only supports up to Windows 2008R2: %s"
-msgstr ""
-"Die Active Directory Domäne hat einen Funktionslevel von Windows Server 2012 "
-"oder neuer, Samba unterstützt momentan nur bis Windows 2008R2: %s"
+#: umc/python/adtakeover/takeover.py:341
+msgid "Registering IP in DNS"
+msgstr "Registrierung der IP im DNS"
 
-#: takeover.py:640
-msgid "Failed to determine AD domain SID."
-msgstr "Die SID der AD-Domäne konnte nicht festgestellt werden."
-
-#: takeover.py:771
-#, python-format
-msgid "AD Server did not return proper time string: %s."
-msgstr ""
-"Der Active Directory Server lieferte eine unerwartete Zeitangabe zurück: %s."
-
-#: takeover.py:779
+#: umc/python/adtakeover/takeover.py:804
 #, python-format
 msgid ""
 "Remote clock is behind local clock by more than %s seconds, refusing to turn "
@@ -271,67 +218,96 @@ msgstr ""
 "als %s Sekunden zurück. Die lokale Zeit kann nicht zurückgestellt werden. "
 "Bitte stellen Sie die Zeit am Active Directory DC vor."
 
-#: takeover.py:790
-#, python-format
-msgid "Internal Error: rdate -s -p failed (%d)."
-msgstr "Internal Error: rdate -s -p schlug fehl (%d)."
+#: umc/python/adtakeover/takeover.py:328
+msgid "Removing the previous AD server account"
+msgstr "Entfernen des alten AD Server Kontos"
 
-#: takeover.py:840
-#, python-format
-msgid "Could not read local machine password: %s"
-msgstr "Interner Fehler beim Lesen des Maschinenpassworts: %s"
+#: umc/python/adtakeover/takeover.py:301
+msgid "Reset sysvol ACLs"
+msgstr "Initialisierung der sysvol ACLs"
 
-#: takeover.py:858 takeover.py:868
-#, python-format
-msgid "Copying %s"
-msgstr "Kopiere %s"
+#: umc/python/adtakeover/takeover.py:244
+msgid "Retrieving information from AD DC"
+msgstr "Abfrage von Informationen vom AD DC"
 
-#: takeover.py:879
+#: umc/python/adtakeover/takeover.py:285
+msgid "Rewriting SIDs in the UCS directory service"
+msgstr "Umschreibung der SIDs im UCS Verzeichnisdienst"
+
+#: umc/python/adtakeover/takeover.py:318
 #, python-format
-msgid "The domain join failed. See %s for details."
+msgid "Search for %s in network"
+msgstr "Netzwerksuche nach %s"
+
+#: umc/python/adtakeover/takeover.py:204
+msgid "Something is wrong with the SYSVOL."
+msgstr "Etwas stimmt nicht mit dem SYSVOL."
+
+#: umc/python/adtakeover/takeover.py:282
+msgid "Starting Samba"
+msgstr "Start von Samba"
+
+#: umc/python/adtakeover/takeover.py:294
+msgid "Starting the S4 Connector"
+msgstr "Start des S4 Connectors"
+
+#: umc/python/adtakeover/takeover.py:272
+msgid "Synchronizing System Clock"
+msgstr "Synchronisation der Systemzeit"
+
+#: umc/python/adtakeover/takeover.py:323
+msgid "Taking over Active Directory domaincontroller roles"
+msgstr "Übernahme der Active Directory Domaincontroller Rollen"
+
+#: umc/python/adtakeover/takeover.py:332
+msgid "Taking over DNS address"
+msgstr "Übernahme der DNS Adresse"
+
+#: umc/python/adtakeover/takeover.py:338
+msgid "Taking over IP address"
+msgstr "Übernahme der IP Adresse"
+
+#: umc/python/adtakeover/takeover.py:335
+msgid "Taking over NETBIOS address"
+msgstr "Übernahme der NETBIOS Adresse"
+
+#: umc/python/adtakeover/takeover.py:661
+#, python-format
+msgid ""
+"The Active Directory domain has a function level of Windows Server 2012 or "
+"newer, Samba currently only supports up to Windows 2008R2: %s"
 msgstr ""
-"Der Domänenbeitritt schlug fehl, die Logdatei %s enthält genauere Details."
+"Die Active Directory Domäne hat einen Funktionslevel von Windows Server 2012 "
+"oder neuer, Samba unterstützt momentan nur bis Windows 2008R2: %s"
 
-#: takeover.py:941
-msgid "Failed to determine new domain SID."
-msgstr "Die neue Domänen-SID konnte nicht festgestellt werden."
-
-#: takeover.py:1314 takeover.py:1322
+#: umc/python/adtakeover/takeover.py:1352
+#: umc/python/adtakeover/takeover.py:1360
 msgid "The Active Directory domain join was not completed successfully yet."
 msgstr ""
 "Der Beitritt zur Active Directory Domäne wurde noch nicht erfolgreich "
 "abgeschlossen."
 
-#: takeover.py:1341
-msgid "Active Directory takeover finished already."
-msgstr "Active Directory Takeover ist schon abgeschlossen."
+#: umc/python/adtakeover/takeover.py:207
+msgid "The Active Directory server seems to be running. It must be shut off."
+msgstr ""
+"Es scheint, als ob der Active Directory Server noch liefe. Er muss "
+"ausgeschaltet werden."
 
-#: takeover.py:1366
+#: umc/python/adtakeover/takeover.py:646
+msgid ""
+"The LDAP base of this UCS domain differs from the LDAP base of the selected "
+"Active Directory domain."
+msgstr ""
+"Die LDAP-Basis dieser UCS Domäne unterscheidet sich von der LDAP-Basis der "
+"ausgewählten Active Directory Domäne."
+
+#: umc/python/adtakeover/takeover.py:1404
 #, python-format
 msgid "The Server IP %s is still online, please shut down the machine."
 msgstr ""
 "Die Server IP %s ist noch online, die Maschine sollte ausgeschaltet werden."
 
-#: takeover.py:1812
-msgid " failed"
-msgstr " schlug fehl"
-
-#: takeover.py:1815
-#, python-format
-msgid "Network connection to %s failed."
-msgstr "Netzwerkverbindung zu %s schlug fehl."
-
-#: takeover.py:1822
-#, python-format
-msgid "Active Directory services not detected at %s."
-msgstr "Active Directory Dienste sind nicht erreichbar über %s."
-
-#: takeover.py:1861
-#, python-format
-msgid "Connection to Active Directory server %s failed."
-msgstr "Die Verbindung zum Active Directory Server %s schlug fehl."
-
-#: takeover.py:1870
+#: umc/python/adtakeover/takeover.py:1944
 #, python-format
 msgid ""
 "The automatic search for an Active Directory server for realm %s did not "
@@ -340,16 +316,46 @@ msgstr ""
 "Die automatische Suche eines Active Directory Servers für den Kerberos Realm "
 "%s lieferte keine Ergebnisse."
 
-#: takeover.py:1894
-msgid "Faild to detect the Active Directory site of the server."
-msgstr ""
-"Die Erkennung des Active Directory Standorts (site) des Servers schlug fehl."
+#: umc/python/adtakeover/takeover.py:186
+msgid "The computer is not reachable."
+msgstr "Der Rechner ist nicht erreichbar."
 
-#: takeover.py:2326
+#: umc/python/adtakeover/takeover.py:923
+#, python-format
+msgid "The domain join failed. See %s for details."
+msgstr ""
+"Der Domänenbeitritt schlug fehl, die Logdatei %s enthält genauere Details."
+
+#: umc/python/adtakeover/takeover.py:641
+msgid ""
+"The selected Active Directory server has the same NTDS GUID as this UCS "
+"server."
+msgstr ""
+"Der angegebene Active Directory Server hat die gleiche NTDS GUID wie dieser "
+"UCS Server."
+
+#: umc/python/adtakeover/takeover.py:213
+msgid "Time difference critical for Kerberos but synchronization aborted."
+msgstr ""
+"Die Zeitdifferenz ist zu groß für Kerberos aber die Synchronisierung schlug "
+"fehl."
+
+#: umc/python/adtakeover/takeover.py:210
+msgid "Time synchronization failed."
+msgstr "Die Zeitsynchronisierung schlug fehl."
+
+#: umc/python/adtakeover/takeover.py:2400
 msgid "UNC doesn't start with \\\\ or //"
 msgstr "UNC Pfad startet nicht mit \\\\ oder //"
 
-#: takeover.py:2333
-#, python-format
-msgid "Invalid UNC string: %s"
-msgstr "Ungültiger UNC Pfad: %s"
+#: umc/python/adtakeover/takeover.py:249
+msgid ""
+"You may proceed with the takeover, but the domain management may be limited "
+"afterwards until a new license is installed."
+msgstr ""
+"Der Takeover kann fortgeführt werden, aber die Domäne kann danach womöglich "
+"nur eingeschränkt verwaltet werden, bis eine neue Lizenz installiert wird."
+
+#: umc/python/adtakeover/takeover.py:571
+msgid "users"
+msgstr "Benutzer"
