* Bug #35090: Improve certificate/SSL handling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52384 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-57) unstable; urgency=low
+
+  * Bug #35090: Improve certificate/SSL handling
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 30 Jul 2014 15:28:49 +0200
+
 univention-ad-connector (8.0.17-56) unstable; urgency=low
 
   * disable_ssl() in admember_join (Bug #35090)
